tests/negative/gold/if_test.gold
tests/negative/if_test.toit:6:5: error: Incomplete expression
  if
    ^
tests/negative/if_test.toit:6:5: error: Missing ':' for 'if' condition
  if
    ^
tests/negative/if_test.toit:8:5: error: Missing ':' for 'if' condition
    print unresolved
    ^~~~~
tests/negative/if_test.toit:9:9: error: Incomplete expression
  if "".
        ^
tests/negative/if_test.toit:9:9: error: Missing ':' for 'if' condition
  if "".
        ^
tests/negative/if_test.toit:10:5: error: Missing condition
  if:
    ^
tests/negative/if_test.toit:7:6: error: 'break' must be inside loop
  if break
     ^~~~~
tests/negative/if_test.toit:8:11: error: Unresolved identifier: 'unresolved'
    print unresolved
          ^~~~~~~~~~
tests/negative/if_test.toit:11:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
Compilation failed.
